Fix position shift on opened dropdown menu...
The BS5 switch to popperjs for dropdown menus was
causing our mega-menu to shift all the way left
(touching the left edge of the scree) when toggled
open by clicking.

--- a/assets/scss/1-base/_header-global.scss
+++ b/assets/scss/1-base/_header-global.scss
@@ -427,9 +427,9 @@
 
 @media screen and (min-width: 992px) {
   .header-global__dropdown-menu--full-width {
-    left: .75rem;
+    left: .75rem !important; // !important needed to override BS5 style
     right: .75rem;
-    top: 5.77rem;
+    top: 5.77rem !important; // !important needed to override BS5 style
   }
 }
 
